2009-11-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Refactor bugzilla-tool to allow for multiple queues
        https://bugs.webkit.org/show_bug.cgi?id=31513

        Divide the commit queue class into three class to make creating
        additional queues easier.

        * Scripts/bugzilla-tool:

2009-11-15  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        svn-apply may not handle git patches created by bugzilla-tool
        https://bugs.webkit.org/show_bug.cgi?id=31457

        * Scripts/modules/scm.py:
        * Scripts/modules/scm_unittest.py:

2009-11-15  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        bugzilla-tool should post git binary diff
        https://bugs.webkit.org/show_bug.cgi?id=31458

        Add --binary option to Git.create_patch.

        * Scripts/modules/scm.py:
        * Scripts/modules/scm_unittest.py:

2009-11-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Add bugzilla-tool check-style
        https://bugs.webkit.org/show_bug.cgi?id=31515

        * Scripts/bugzilla-tool:
        * Scripts/modules/bugzilla.py:

2009-11-13  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Make the Qt Linux only --valgrind feature, suppress errors
        defined in the SuppressedValgrindErrors file.

        * Scripts/run-webkit-tests:

2009-11-13  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Set the locale to C and not to the current one in use on the system.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):

2009-11-13  Adam Roben  <aroben@apple.com>

        Add support for
        http/tests/security/isolatedWorld/didClearWindowObject.html

        Fixes <http://webkit.org/b/31124> Tell the WebFrameLoadDelegate when